<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewMain"
        android:layout_width="118dp"
        android:layout_height="110dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/health_icon" />

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="680dp"
        android:text="@string/app_name2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewAutorMain"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="104dp"
        android:text="@string/app_autor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameMane"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="513dp"
        android:text="@string/patient_data"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/text_fio"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ageText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:hint="@string/text_age"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fioText"
        app:layout_constraintTop_toBottomOf="@+id/fioText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="175dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageText" />

    <Button
        android:id="@+id/pressureButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="138dp"
        android:text="@string/button_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageText" />

    <Button
        android:id="@+id/healthButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="30dp"
        android:text="@string/health_indicators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageText" />
</androidx.constraintlayout.widget.ConstraintLayout>