<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthActivity">


    <ImageView
        android:id="@+id/imageViewHead"
        android:layout_width="118dp"
        android:layout_height="110dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/health_icon" />

    <TextView
        android:id="@+id/textViewHead"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="680dp"
        android:text="@string/app_name2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewHeadAutor"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="104dp"
        android:text="@string/app_autor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHeadName"
        android:layout_width="251dp"
        android:layout_height="49dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="513dp"
        android:text="@string/health_indicators"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weightText"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:hint="@string/text_weight"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/stepText"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/number_of_steps"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/weightText"
        app:layout_constraintTop_toBottomOf="@+id/weightText" />

    <Button
        android:id="@+id/saveButtonHead"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="50dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowerText"
        app:layout_constraintVertical_bias="0.987" />


</androidx.constraintlayout.widget.ConstraintLayout>